tests/ui/traits/unconstrained-projection-normalization.current.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-projection-normalization.rs:15:6
   |
LL | impl<T: PointeeSized> Every for Thing {
   |      ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
